# cs1-sorting

./: CMakeLists.txt  README.md
include/: sort.hpp  usefull_funcs.hpp
source/: main.cpp  sort.cpp  usefull_funcs.cpp
